--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,10 +1,9 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Encuesta Laboral";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="alert alert-primary text-center fw-bold">
+    <a asp-page="Encuestas">Ir a la Encuesta</a>
 </div>
