--- a/Pages/Encuestas.cshtml
+++ b/Pages/Encuestas.cshtml
@@ -5,7 +5,7 @@
 
 <form asp-page="Encuesta">
     <div class="text-center">
-        <img src="/Images/jinx2.jpg" alt="Encuesta" class="img-fluid" width="300" height="300" />
+        <img src="/Images/unnamed.png" alt="Encuesta" class="img-fluid" width="300" height="300" />
     </div>
 
     <div class="form-group">
