Se ha creado el HTML de Gracias y resultados, con la lógica de la página 'Resultados'.

--- a/Pages/Gracias.cshtml
+++ b/Pages/Gracias.cshtml
@@ -2,3 +2,21 @@
 @model Encuesta.Pages.GraciasModel
 @{
 }
+
+<div class="row">
+    <div class="col text-center">
+        <h1 class="mb-3">
+            ¡Gracias por tu respuesta!
+        </h1>
+
+        <h2 class="mb-3">
+            para ver tus resultados, accede al siguiente enlace:
+        </h2>
+
+        <a
+            class="btn btn-lg btn-primary"
+            asp-page="Resultados">
+            Ver Resultados
+        </a>
+    </div>
+</div>
